--- a/SoftDevGaming3Project/SoftDevGaming3Project.vcxproj
+++ b/SoftDevGaming3Project/SoftDevGaming3Project.vcxproj
@@ -127,11 +127,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Creature.cpp" />
+    <ClCompile Include="Inventory.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="RogueMap.cpp" />
     <ClCompile Include="RoguePlayerMovement.cpp" />
     <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Creature.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="RogueMap.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
