--- a/SoftDevGaming3Project/SoftDevGaming3Project.vcxproj
+++ b/SoftDevGaming3Project/SoftDevGaming3Project.vcxproj
@@ -127,7 +127,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Creature.cpp" />
+    <ClCompile Include="AverageMonster.cpp" />
+    <ClCompile Include="BigMonster.cpp" />
+    <ClCompile Include="SmallMonster.cpp" />
     <ClCompile Include="Inventory.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="RogueMap.cpp" />
@@ -135,7 +137,10 @@
     <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AverageMonster.h" />
+    <ClInclude Include="BigMonster.h" />
     <ClInclude Include="Creature.h" />
+    <ClInclude Include="SmallMonster.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="RogueMap.h" />
     <ClInclude Include="Utility.h" />
