--- a/SoftDevGaming3Project/SoftDevGaming3Project.vcxproj.filters
+++ b/SoftDevGaming3Project/SoftDevGaming3Project.vcxproj.filters
@@ -39,6 +39,15 @@
     <ClCompile Include="BigMonster.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Dagger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LightSword.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BroadSword.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Utility.h">
@@ -53,13 +62,16 @@
     <ClInclude Include="Player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SmallMonster.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="AverageMonster.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="BigMonster.h">
+    <ClInclude Include="WeaponBase.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WeaponMelee.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Monster.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
