Added more headers
May use for player and monster position information for use in following the player when in range. Not sure yet though. Will hopefully be meeting Adrielle about it.

--- a/SoftDevGaming3Project/SoftDevGaming3Project.vcxproj
+++ b/SoftDevGaming3Project/SoftDevGaming3Project.vcxproj
@@ -142,8 +142,11 @@
   <ItemGroup>
     <ClInclude Include="AverageMonster.h" />
     <ClInclude Include="Creature.h" />
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="Item.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Point.h" />
     <ClInclude Include="RogueMap.h" />
     <ClInclude Include="Utility.h" />
     <ClInclude Include="WeaponBase.h" />
