--- a/SoftDevGaming3Project/SoftDevGaming3Project.vcxproj.filters
+++ b/SoftDevGaming3Project/SoftDevGaming3Project.vcxproj.filters
@@ -74,5 +74,14 @@
     <ClInclude Include="Monster.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Item.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Point.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Entity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
